test/cases/compile_errors/invalid_empty_unicode_escape.zig
export fn entry() void {
    const a = '\u{}';
}

// error
//
// :2:19: error: empty unicode escape sequence
